Tue Oct  8 13:53:21 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_uniq): use rb_hash_keys().

	* internal.h: define rb_hash_keys() as internal API.

	* hash.c (rb_hash_keys): ditto.

Tue Oct  8 10:56:39 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c: disable FIBER_USE_NATIVE on GNU/Hurd because it doesn't
	  support a combination getcontext() and threads. Patch by
	  Gabriele Giacone (1o5g4r8o@gmail.com). [Bug #8990][ruby-core:57685]

Tue Oct  8 05:58:12 2013  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.strptime): Time.strptime('0', '%s') returns local
	  time Time object as Ruby 2.0 and before.

Tue Oct  8 05:40:37 2013  Eric Hodel  <drbrain@segment7.net>

	* .travis.yml:  Rebuild Travis CI's "ruby-head" version on successful
	  build.  Patch by Konstantin Haase.  [Fixes GH-417]
	  https://github.com/ruby/ruby/pull/417

Tue Oct  8 04:28:25 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-mode.el: Use preceding-char/following-char
	  (returning 0 at BOF/EOF) instead of char-before/char-after
	  (returning nil at BOF/EOF) to avoid error from char-syntax when
	  at BOF/EOF.

Tue Oct  8 04:12:45 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-additional.el (ruby-mode-set-encoding): Add a missing
	  else clause to unbreak with `cp932`, etc.

	* misc/ruby-mode.el (ruby-mode-set-encoding): Ditto.

Tue Oct  8 03:57:34 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-additional.el (ruby-mode-set-encoding): Use
	  `default-buffer-file-coding-system` if the :prefer-utf-8
	  property is not available.

	* misc/ruby-mode.el (ruby-mode-set-encoding): Ditto.

	* misc/ruby-additional.el (ruby-encoding-map): Override the
	  default value.

Tue Oct  8 03:19:19 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-additional.el (ruby-mode-set-encoding): Add support
	  for `prefer-utf-8` which was introduced in Emacs trunk.

	* misc/ruby-additional.el (ruby-encoding-map): Add a mapping from